--- a/src/main/resources/templates/AllTracks.html
+++ b/src/main/resources/templates/AllTracks.html
@@ -18,40 +18,16 @@
 </head>
 
 <body class="body">
-<header class="header">
-    <div class="container">
-        <div class="header__menu-top">
-            <a th:href="@{/}"><img th:src="@{/images/header/logotype.svg}" alt="лого" class="header_logo"></a>
-            <ul class="header__links">
-                <li class="header__link"><a href="search.html">Поиск <img th:src="@{/images/header/search.svg}"></a>
-                </li>
-                <li class="header__link"><a th:href="@{/}">Все треки <img
-                        th:src="@{/images/header/headphones.svg}"></a></li>
-                <li class="header__link"><a th:href="@{/allartist}">Артисты <img
-                        th:src="@{/images/header/artists.svg}"></a></li>
-                <li class="header__link"><a th:href="@{/subscribe}">Подписка <img th:src="@{/images/header/subs.svg}"></a>
-                </li>
-                <li class="header__link"><a th:href="@{/project}">Проект <img th:src="@{/images/header/project.svg}"></a>
-                </li>
-                <li class="header__link"><a th:href="@{/collection}">Коллекция <img
-                        th:src="@{/images/header/like.svg}"></a></li>
-            </ul>
-            <div class="header_ets">
-                <a th:href="@{/settings}" class="header_setting"><img th:src="@{/images/header/setting.svg}" alt="set"></a>
-                <a th:href="@{/registration}" class="header_logout"><img th:src="@{/images/header/logout.svg}" alt="log"></a>
-            </div>
-        </div>
-    </div>
-</header>
+<div style="background: rgba(83, 71, 204, 0.60); top: -28%; left: -7%;" class="top-decor-left"></div>
+<div style="background: rgba(191, 62, 253, 0.50); top: -40%; left: 30%;" class="top-decor-left"></div>
+
+<header class="header" th:include="components/header :: header"></header>
 
 <section class="main">
     <div class="container">
         <div class="tracks-main">
             <div class="tracks-main__top">
                 <h1 class="tracks-main__title title">Релизы</h1>
-                <button class="tracks-main__top-button" onclick="modal_addRelease()">
-                    <img src="../images/admin-add-entity.svg">
-                </button>
             </div>
             <th:block th:if="${tracks.isEmpty()}">
                 <p>Релизов пока нет (странно конечно что на музыкальном сервисе нет музыки) XD</p>
@@ -116,7 +92,7 @@
                 <div class="audio-left-block">
 
                     <div class="audio__info-wrapper">
-                        <img src="../images/cover/Nirvana_album_cover.svg.webp" alt="Обложка аудио" width="40">
+                        <img src="../images/cover/Nirvana_album_cover.svg.webp" alt="Обложка аудио" width="50">
                         <div class="track__info">
                             <h3>Название аудио</h3>
                             <p>Имя исполнителя</p>
