--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -16,36 +16,12 @@
 </head>
 
 <body>
-<header class="header">
-    <div class="container">
-        <div class="header__menu-top">
-            <a th:href="@{/}"><img th:src="@{/images/header/logotype.svg}" alt="лого" class="header_logo"></a>
-            <ul class="header__links">
-                <li class="header__link"><a href="search.html">Поиск <img th:src="@{/images/header/search.svg}"></a>
-                </li>
-                <li class="header__link"><a th:href="@{/}">Все треки <img
-                        th:src="@{/images/header/headphones.svg}"></a></li>
-                <li class="header__link"><a th:href="@{/allartist}">Артисты <img
-                        th:src="@{/images/header/artists.svg}"></a></li>
-                <li class="header__link"><a th:href="@{/subscribe}">Подписка <img th:src="@{/images/header/subs.svg}"></a>
-                </li>
-                <li class="header__link"><a th:href="@{/project}">Проект <img th:src="@{/images/header/project.svg}"></a>
-                </li>
-                <li class="header__link"><a th:href="@{/collection}">Коллекция <img
-                        th:src="@{/images/header/like.svg}"></a></li>
-            </ul>
-            <div class="header_ets">
-                <a th:href="@{/settings}" class="header_setting"><img th:src="@{/images/header/setting.svg}" alt="set"></a>
-                <a th:href="@{/registration}" class="header_logout"><img th:src="@{/images/header/logout.svg}" alt="log"></a>
-            </div>
-        </div>
-    </div>
-</header>
+<header class="header" th:include="components/header :: header"></header>
 <section class="project">
     <div class="container">
         <h1 class="project__title title">Проект</h1>
         <p class="project__description text">В проекте принимали участие 2 студента из техникума “Бизнес и право” и
-            один гений, который вложил не мало сил, дал достаточно знаний, и курировал все существование проекта</p>
+            один гений, который вложил немало сил, дал достаточно знаний, и курировал все существование проекта</p>
         <div class="project__developers">
             <div class="project__develop">
                 <img src="../images/Аркаша.png" alt="Разработчик">
