--- a/src/main/resources/templates/setting.html
+++ b/src/main/resources/templates/setting.html
@@ -29,8 +29,8 @@
                         <label for="avatar" class="avatar-file">
                             <img th:src="@{/images/li_camera.svg}">
                         </label>
-                        <input  id="avatar" type="file" name="file" accept="image/*">
-                        <img class="setting-ava-img" th:src="@{'/uploads/' + ${user.avatar}}" alt="Avatar"></div>
+                        <input id="avatar" type="file" name="file" accept="image/*" onchange="previewFile()">
+                        <img class="setting-ava-img" th:src="@{'/uploads/' + ${user.avatar}}" alt="Avatar" id="preview"></div>
                     <div class="setting-info">
                         <input th:field="*{id}" type="hidden" class="setting-info-input" placeholder="Ваше имя"
                                name="id" required>
@@ -56,6 +56,24 @@
 </section>
 
 </body>
+
+<script>
+    function previewFile() {
+        const preview = document.getElementById('preview');
+        const file = document.querySelector('input[type=file]').files[0];
+        const reader = new FileReader();
+
+        reader.onloadend = function () {
+            if (file) {
+                preview.src = reader.result;
+            }
+        }
+
+        if (file) {
+            reader.readAsDataURL(file);
+        }
+    }
+</script>
 
 
 </html>
